benchmarks/real-verification/Csound5.16.6/build/csound_orcparse.output
Terminals unused in grammar

   S_TASSIGN
   S_TABREF
   S_BITSHIFT_RRIGHT
   UDO_TOKEN
   T_ERROR
   T_STRSET
   T_PSET
   T_CTRLINIT
   T_MASSIGN
   T_TURNON
   T_PREALLOC
   T_ZAKINIT
   T_FTGEN
   T_INIT
   T_IDENT_B
   T_IDENT_b
   T_INSTLIST
   S_LEQ
   S_GEQ
   S_ATAT
   S_AT
   S_GOTO
   T_HIGHEST


State 29 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce, 1 reduce/reduce
State 249 conflicts: 3 reduce/reduce
State 250 conflicts: 3 reduce/reduce
State 251 conflicts: 3 reduce/reduce
State 252 conflicts: 3 reduce/reduce
State 253 conflicts: 3 reduce/reduce
State 254 conflicts: 3 reduce/reduce
State 255 conflicts: 3 reduce/reduce
State 256 conflicts: 3 reduce/reduce
State 257 conflicts: 3 reduce/reduce
State 258 conflicts: 3 reduce/reduce
State 259 conflicts: 3 reduce/reduce
State 260 conflicts: 3 reduce/reduce
State 261 conflicts: 3 reduce/reduce
State 262 conflicts: 3 reduce/reduce
State 263 conflicts: 3 reduce/reduce
State 264 conflicts: 3 reduce/reduce
State 282 conflicts: 3 shift/reduce


Grammar

    0 $accept: orcfile $end

    1 orcfile: rootstatement

    2 rootstatement: rootstatement topstatement
    3              | rootstatement instrdecl
    4              | rootstatement udodecl
    5              | topstatement
    6              | instrdecl
    7              | udodecl

    8 instlist: INTEGER_TOKEN ',' instlist
    9         | label ',' instlist
   10         | '+' label ',' instlist
   11         | '+' label
   12         | INTEGER_TOKEN
   13         | label

   14 $@1: %empty

   15 $@2: %empty

   16 instrdecl: INSTR_TOKEN $@1 instlist NEWLINE $@2 statementlist ENDIN_TOKEN NEWLINE
   17          | INSTR_TOKEN NEWLINE error

   18 udoname: T_IDENT
   19        | T_OPCODE
   20        | T_OPCODE0

   21 $@3: %empty

   22 $@4: %empty

   23 $@5: %empty

   24 $@6: %empty

   25 $@7: %empty

   26 udodecl: UDOSTART_DEFINITION $@3 udoname $@4 ',' $@5 UDO_ANS_TOKEN $@6 ',' UDO_ARGS_TOKEN NEWLINE $@7 statementlist UDOEND_TOKEN NEWLINE

   27 statementlist: statementlist statement
   28              | %empty

   29 topstatement: rident '=' expr NEWLINE
   30             | statement

   31 statement: ident '=' expr NEWLINE
   32          | T_IDENT_T '=' T_IDENT_T NEWLINE
   33          | T_IDENT_T '[' iexp ']' '=' expr NEWLINE
   34          | ans opcode exprlist NEWLINE
   35          | opcode0 exprlist NEWLINE
   36          | LABEL_TOKEN
   37          | goto label NEWLINE
   38          | IF_TOKEN bexpr goto label NEWLINE
   39          | ifthen
   40          | UNTIL_TOKEN bexpr DO_TOKEN statementlist OD_TOKEN
   41          | NEWLINE

   42 ans: ident
   43    | T_IDENT error
   44    | ans ',' ident
   45    | ans ',' T_IDENT error

   46 ifthen: IF_TOKEN bexpr then NEWLINE statementlist ENDIF_TOKEN NEWLINE
   47       | IF_TOKEN bexpr then NEWLINE statementlist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   48       | IF_TOKEN bexpr then NEWLINE statementlist elseiflist ENDIF_TOKEN NEWLINE
   49       | IF_TOKEN bexpr then NEWLINE statementlist elseiflist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE

   50 elseiflist: elseiflist elseif
   51           | elseif

   52 elseif: ELSEIF_TOKEN bexpr then NEWLINE statementlist

   53 then: THEN_TOKEN
   54     | KTHEN_TOKEN
   55     | ITHEN_TOKEN

   56 goto: GOTO_TOKEN
   57     | KGOTO_TOKEN
   58     | IGOTO_TOKEN

   59 label: T_OPCODE
   60      | T_OPCODE0
   61      | T_FUNCTION
   62      | T_IDENT_P
   63      | T_IDENT_I
   64      | T_IDENT_GI
   65      | T_IDENT_K
   66      | T_IDENT_GK
   67      | T_IDENT_A
   68      | T_IDENT_GA
   69      | T_IDENT_W
   70      | T_IDENT_GW
   71      | T_IDENT_F
   72      | T_IDENT_GF
   73      | T_IDENT_S
   74      | T_IDENT_GS
   75      | T_IDENT_T
   76      | T_IDENT_GT
   77      | T_IDENT
   78      | IF_TOKEN
   79      | THEN_TOKEN
   80      | ITHEN_TOKEN
   81      | KTHEN_TOKEN
   82      | ELSEIF_TOKEN
   83      | ENDIF_TOKEN
   84      | UNTIL_TOKEN
   85      | DO_TOKEN
   86      | OD_TOKEN
   87      | INTEGER_TOKEN
   88      | ENDIN_TOKEN

   89 exprlist: exprlist ',' expr
   90         | exprlist ',' label
   91         | exprlist ',' error
   92         | expr
   93         | bexpr
   94         | T_IDENT
   95         | T_OPCODE
   96         | T_FUNCTION
   97         | %empty

   98 bexpr: '(' bexpr ')'
   99      | expr S_LE expr
  100      | expr S_LE error
  101      | expr S_GE expr
  102      | expr S_GE error
  103      | expr S_NEQ expr
  104      | expr S_NEQ error
  105      | expr S_EQ expr
  106      | expr S_EQ error
  107      | expr '=' expr
  108      | expr '=' error
  109      | expr S_GT expr
  110      | expr S_GT error
  111      | expr S_LT expr
  112      | expr S_LT error
  113      | bexpr S_AND bexpr
  114      | bexpr S_AND error
  115      | bexpr S_OR bexpr
  116      | bexpr S_OR error
  117      | '!' bexpr
  118      | '!' error

  119 expr: bexpr '?' expr ':' expr
  120     | bexpr '?' expr ':' error
  121     | bexpr '?' expr error
  122     | bexpr '?' error
  123     | iexp

  124 iexp: iexp '+' iexp
  125     | iexp '+' error
  126     | iexp '-' iexp
  127     | iexp '-' error
  128     | '-' iexp
  129     | '-' error
  130     | '+' iexp
  131     | '+' error
  132     | iterm

  133 iterm: iexp '*' iexp
  134      | iexp '*' error
  135      | iexp '/' iexp
  136      | iexp '/' error
  137      | iexp '^' iexp
  138      | iexp '^' error
  139      | iexp '%' iexp
  140      | iexp '%' error
  141      | ifac

  142 ifac: ident
  143     | constant
  144     | T_IDENT_T '[' iexp ']'
  145     | iexp '|' iexp
  146     | iexp '|' error
  147     | iexp '&' iexp
  148     | iexp '&' error
  149     | iexp '#' iexp
  150     | iexp '#' error
  151     | iexp S_BITSHIFT_LEFT iexp
  152     | iexp S_BITSHIFT_LEFT error
  153     | iexp S_BITSHIFT_RIGHT iexp
  154     | iexp S_BITSHIFT_RIGHT error
  155     | '~' iexp
  156     | '~' error
  157     | '(' expr ')'
  158     | '(' expr error
  159     | '(' error
  160     | function '(' exprlist ')'
  161     | function '(' error

  162 function: T_FUNCTION

  163 rident: SRATE_TOKEN
  164       | KRATE_TOKEN
  165       | KSMPS_TOKEN
  166       | NCHNLS_TOKEN
  167       | NCHNLSI_TOKEN
  168       | ZERODBFS_TOKEN

  169 ident: T_IDENT_I
  170      | T_IDENT_K
  171      | T_IDENT_F
  172      | T_IDENT_W
  173      | T_IDENT_S
  174      | T_IDENT_T
  175      | T_IDENT_A
  176      | T_IDENT_P
  177      | gident

  178 gident: T_IDENT_GI
  179       | T_IDENT_GK
  180       | T_IDENT_GF
  181       | T_IDENT_GW
  182       | T_IDENT_GS
  183       | T_IDENT_GT
  184       | T_IDENT_GA

  185 constant: INTEGER_TOKEN
  186         | NUMBER_TOKEN
  187         | STRING_TOKEN
  188         | SRATE_TOKEN
  189         | KRATE_TOKEN
  190         | KSMPS_TOKEN
  191         | NCHNLS_TOKEN
  192         | NCHNLSI_TOKEN
  193         | ZERODBFS_TOKEN

  194 opcode0: T_OPCODE0

  195 opcode: T_OPCODE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 117 118
'#' (35) 149 150
'%' (37) 139 140
'&' (38) 147 148
'(' (40) 98 157 158 159 160 161
')' (41) 98 157 160
'*' (42) 133 134
'+' (43) 10 11 124 125 130 131
',' (44) 8 9 10 26 44 45 89 90 91
'-' (45) 126 127 128 129
'/' (47) 135 136
':' (58) 119 120
'=' (61) 29 31 32 33 107 108
'?' (63) 119 120 121 122
'[' (91) 33 144
']' (93) 33 144
'^' (94) 137 138
'|' (124) 145 146
'~' (126) 155 156
error (256) 17 43 45 91 100 102 104 106 108 110 112 114 116 118 120
    121 122 125 127 129 131 134 136 138 140 146 148 150 152 154 156
    158 159 161
NEWLINE (258) 16 17 26 29 31 32 33 34 35 37 38 41 46 47 48 49 52
S_NEQ (259) 103 104
S_AND (260) 113 114
S_OR (261) 115 116
S_LT (262) 111 112
S_LE (263) 99 100
S_EQ (264) 105 106
S_TASSIGN (265)
S_TABREF (266)
S_GT (267) 109 110
S_GE (268) 101 102
S_BITSHIFT_LEFT (269) 151 152
S_BITSHIFT_RRIGHT (270)
LABEL_TOKEN (271) 36
IF_TOKEN (272) 38 46 47 48 49 78
T_OPCODE0 (273) 20 60 194
T_OPCODE (274) 19 59 95 195
UDO_TOKEN (275)
UDOSTART_DEFINITION (276) 26
UDOEND_TOKEN (277) 26
UDO_ANS_TOKEN (278) 26
UDO_ARGS_TOKEN (279) 26
T_ERROR (280)
T_FUNCTION (281) 61 96 162
INSTR_TOKEN (282) 16 17
ENDIN_TOKEN (283) 16 88
T_STRSET (284)
T_PSET (285)
T_CTRLINIT (286)
T_MASSIGN (287)
T_TURNON (288)
T_PREALLOC (289)
T_ZAKINIT (290)
T_FTGEN (291)
T_INIT (292)
GOTO_TOKEN (293) 56
KGOTO_TOKEN (294) 57
IGOTO_TOKEN (295) 58
SRATE_TOKEN (296) 163 188
KRATE_TOKEN (297) 164 189
KSMPS_TOKEN (298) 165 190
NCHNLS_TOKEN (299) 166 191
NCHNLSI_TOKEN (300) 167 192
ZERODBFS_TOKEN (301) 168 193
STRING_TOKEN (302) 187
T_IDENT (303) 18 43 45 77 94
T_IDENT_I (304) 63 169
T_IDENT_GI (305) 64 178
T_IDENT_K (306) 65 170
T_IDENT_GK (307) 66 179
T_IDENT_A (308) 67 175
T_IDENT_GA (309) 68 184
T_IDENT_W (310) 69 172
T_IDENT_GW (311) 70 181
T_IDENT_F (312) 71 171
T_IDENT_GF (313) 72 180
T_IDENT_S (314) 73 173
T_IDENT_GS (315) 74 182
T_IDENT_T (316) 32 33 75 144 174
T_IDENT_GT (317) 76 183
T_IDENT_P (318) 62 176
T_IDENT_B (319)
T_IDENT_b (320)
INTEGER_TOKEN (321) 8 12 87 185
NUMBER_TOKEN (322) 186
THEN_TOKEN (323) 53 79
ITHEN_TOKEN (324) 55 80
KTHEN_TOKEN (325) 54 81
ELSEIF_TOKEN (326) 52 82
ELSE_TOKEN (327) 47 49
ENDIF_TOKEN (328) 46 47 48 49 83
UNTIL_TOKEN (329) 40 84
DO_TOKEN (330) 40 85
OD_TOKEN (331) 40 86
T_INSTLIST (332)
S_LEQ (333)
S_GEQ (334)
S_BITSHIFT_RIGHT (335) 153 154
S_UNOT (336)
S_UMINUS (337)
S_ATAT (338)
S_AT (339)
S_GOTO (340)
T_HIGHEST (341)


Nonterminals, with rules where they appear

$accept (106)
    on left: 0
orcfile (107)
    on left: 1, on right: 0
rootstatement (108)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4
instlist (109)
    on left: 8 9 10 11 12 13, on right: 8 9 10 16
instrdecl (110)
    on left: 16 17, on right: 3 6
$@1 (111)
    on left: 14, on right: 16
$@2 (112)
    on left: 15, on right: 16
udoname (113)
    on left: 18 19 20, on right: 26
udodecl (114)
    on left: 26, on right: 4 7
$@3 (115)
    on left: 21, on right: 26
$@4 (116)
    on left: 22, on right: 26
$@5 (117)
    on left: 23, on right: 26
$@6 (118)
    on left: 24, on right: 26
$@7 (119)
    on left: 25, on right: 26
statementlist (120)
    on left: 27 28, on right: 16 26 27 40 46 47 48 49 52
topstatement (121)
    on left: 29 30, on right: 2 5
statement (122)
    on left: 31 32 33 34 35 36 37 38 39 40 41, on right: 27 30
ans (123)
    on left: 42 43 44 45, on right: 34 44 45
ifthen (124)
    on left: 46 47 48 49, on right: 39
elseiflist (125)
    on left: 50 51, on right: 48 49 50
elseif (126)
    on left: 52, on right: 50 51
then (127)
    on left: 53 54 55, on right: 46 47 48 49 52
goto (128)
    on left: 56 57 58, on right: 37 38
label (129)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79 80 81 82 83 84 85 86 87 88, on right: 9 10 11 13 37 38
    90
exprlist (130)
    on left: 89 90 91 92 93 94 95 96 97, on right: 34 35 89 90 91 160
bexpr (131)
    on left: 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112 113 114 115 116 117 118, on right: 38 40 46 47 48 49 52 93
    98 113 114 115 116 117 119 120 121 122
expr (132)
    on left: 119 120 121 122 123, on right: 29 31 33 89 92 99 100 101
    102 103 104 105 106 107 108 109 110 111 112 119 120 121 157 158
iexp (133)
    on left: 124 125 126 127 128 129 130 131 132, on right: 33 123
    124 125 126 127 128 130 133 134 135 136 137 138 139 140 144 145
    146 147 148 149 150 151 152 153 154 155
iterm (134)
    on left: 133 134 135 136 137 138 139 140 141, on right: 132
ifac (135)
    on left: 142 143 144 145 146 147 148 149 150 151 152 153 154 155
    156 157 158 159 160 161, on right: 141
function (136)
    on left: 162, on right: 160 161
rident (137)
    on left: 163 164 165 166 167 168, on right: 29
ident (138)
    on left: 169 170 171 172 173 174 175 176 177, on right: 31 42 44
    142
gident (139)
    on left: 178 179 180 181 182 183 184, on right: 177
constant (140)
    on left: 185 186 187 188 189 190 191 192 193, on right: 143
opcode0 (141)
    on left: 194, on right: 35
opcode (142)
    on left: 195, on right: 34


State 0

    0 $accept: . orcfile $end
    1 orcfile: . rootstatement
    2 rootstatement: . rootstatement topstatement
    3              | . rootstatement instrdecl
    4              | . rootstatement udodecl
    5              | . topstatement
    6              | . instrdecl
    7              | . udodecl
   16 instrdecl: . INSTR_TOKEN $@1 instlist NEWLINE $@2 statementlist ENDIN_TOKEN NEWLINE
   17          | . INSTR_TOKEN NEWLINE error
   26 udodecl: . UDOSTART_DEFINITION $@3 udoname $@4 ',' $@5 UDO_ANS_TOKEN $@6 ',' UDO_ARGS_TOKEN NEWLINE $@7 statementlist UDOEND_TOKEN NEWLINE
   29 topstatement: . rident '=' expr NEWLINE
   30             | . statement
   31 statement: . ident '=' expr NEWLINE
   32          | . T_IDENT_T '=' T_IDENT_T NEWLINE
   33          | . T_IDENT_T '[' iexp ']' '=' expr NEWLINE
   34          | . ans opcode exprlist NEWLINE
   35          | . opcode0 exprlist NEWLINE
   36          | . LABEL_TOKEN
   37          | . goto label NEWLINE
   38          | . IF_TOKEN bexpr goto label NEWLINE
   39          | . ifthen
   40          | . UNTIL_TOKEN bexpr DO_TOKEN statementlist OD_TOKEN
   41          | . NEWLINE
   42 ans: . ident
   43    | . T_IDENT error
   44    | . ans ',' ident
   45    | . ans ',' T_IDENT error
   46 ifthen: . IF_TOKEN bexpr then NEWLINE statementlist ENDIF_TOKEN NEWLINE
   47       | . IF_TOKEN bexpr then NEWLINE statementlist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   48       | . IF_TOKEN bexpr then NEWLINE statementlist elseiflist ENDIF_TOKEN NEWLINE
   49       | . IF_TOKEN bexpr then NEWLINE statementlist elseiflist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   56 goto: . GOTO_TOKEN
   57     | . KGOTO_TOKEN
   58     | . IGOTO_TOKEN
  163 rident: . SRATE_TOKEN
  164       | . KRATE_TOKEN
  165       | . KSMPS_TOKEN
  166       | . NCHNLS_TOKEN
  167       | . NCHNLSI_TOKEN
  168       | . ZERODBFS_TOKEN
  169 ident: . T_IDENT_I
  170      | . T_IDENT_K
  171      | . T_IDENT_F
  172      | . T_IDENT_W
  173      | . T_IDENT_S
  174      | . T_IDENT_T
  175      | . T_IDENT_A
  176      | . T_IDENT_P
  177      | . gident
  178 gident: . T_IDENT_GI
  179       | . T_IDENT_GK
  180       | . T_IDENT_GF
  181       | . T_IDENT_GW
  182       | . T_IDENT_GS
  183       | . T_IDENT_GT
  184       | . T_IDENT_GA
  194 opcode0: . T_OPCODE0

    NEWLINE              shift, and go to state 1
    LABEL_TOKEN          shift, and go to state 2
    IF_TOKEN             shift, and go to state 3
    T_OPCODE0            shift, and go to state 4
    UDOSTART_DEFINITION  shift, and go to state 5
    INSTR_TOKEN          shift, and go to state 6
    GOTO_TOKEN           shift, and go to state 7
    KGOTO_TOKEN          shift, and go to state 8
    IGOTO_TOKEN          shift, and go to state 9
    SRATE_TOKEN          shift, and go to state 10
    KRATE_TOKEN          shift, and go to state 11
    KSMPS_TOKEN          shift, and go to state 12
    NCHNLS_TOKEN         shift, and go to state 13
    NCHNLSI_TOKEN        shift, and go to state 14
    ZERODBFS_TOKEN       shift, and go to state 15
    T_IDENT              shift, and go to state 16
    T_IDENT_I            shift, and go to state 17
    T_IDENT_GI           shift, and go to state 18
    T_IDENT_K            shift, and go to state 19
    T_IDENT_GK           shift, and go to state 20
    T_IDENT_A            shift, and go to state 21
    T_IDENT_GA           shift, and go to state 22
    T_IDENT_W            shift, and go to state 23
    T_IDENT_GW           shift, and go to state 24
    T_IDENT_F            shift, and go to state 25
    T_IDENT_GF           shift, and go to state 26
    T_IDENT_S            shift, and go to state 27
    T_IDENT_GS           shift, and go to state 28
    T_IDENT_T            shift, and go to state 29
    T_IDENT_GT           shift, and go to state 30
    T_IDENT_P            shift, and go to state 31
    UNTIL_TOKEN          shift, and go to state 32

    orcfile        go to state 33
    rootstatement  go to state 34
    instrdecl      go to state 35
    udodecl        go to state 36
    topstatement   go to state 37
    statement      go to state 38
    ans            go to state 39
    ifthen         go to state 40
    goto           go to state 41
    rident         go to state 42
    ident          go to state 43
    gident         go to state 44
    opcode0        go to state 45


State 1

   41 statement: NEWLINE .

    $default  reduce using rule 41 (statement)


State 2

   36 statement: LABEL_TOKEN .

    $default  reduce using rule 36 (statement)


State 3

   38 statement: IF_TOKEN . bexpr goto label NEWLINE
   46 ifthen: IF_TOKEN . bexpr then NEWLINE statementlist ENDIF_TOKEN NEWLINE
   47       | IF_TOKEN . bexpr then NEWLINE statementlist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   48       | IF_TOKEN . bexpr then NEWLINE statementlist elseiflist ENDIF_TOKEN NEWLINE
   49       | IF_TOKEN . bexpr then NEWLINE statementlist elseiflist ELSE_TOKEN statementlist ENDIF_TOKEN NEWLINE
   98 bexpr: . '(' bexpr ')'
   99      | . expr S_LE expr
  100      | . expr S_LE error
  101      | . expr S_GE expr
  102      | . expr S_GE error
  103      | . expr S_NEQ expr
  104      | . expr S_NEQ error
  105      | . expr S_EQ expr
  106      | . expr S_EQ error
  107      | . expr '=' expr
  108      | . expr '=' error
  109      | . expr S_GT expr
  110      | . expr S_GT error
  111      | . expr S_LT expr
  112      | . expr S_LT error
  113      | . bexpr S_AND bexpr
  114      | . bexpr S_AND error
  115      | . bexpr S_OR bexpr
  116      | . bexpr S_OR error
  117      | . '!' bexpr
  118      | . '!' error
  119 expr: . bexpr '?' expr ':' expr
  120     | . bexpr '?' expr ':' error
  121     | . bexpr '?' expr error
  122     | . bexpr '?' error
  123     | . iexp
  124 iexp: . iexp '+' iexp
  125     | . iexp '+' error
  126     | . iexp '-' iexp
  127     | . iexp '-' error
  128     | . '-' iexp
  129     | . '-' error
  130     | . '+' iexp
  131     | . '+' error
  132     | . iterm
  133 iterm: . iexp '*' iexp
  134      | . iexp '*' error
  135      | . iexp '/' iexp
  136      | . iexp '/' error
  137      | . iexp '^' iexp
  138      | . iexp '^' error
  139      | . iexp '%' iexp
  140      | . iexp '%' error
  141      | . ifac
  142 ifac: . ident
  143     | . constant
  144     | . T_IDENT_T '[' iexp ']'
  145     | . iexp '|' iexp
  146     | . iexp '|' error
  147     | . iexp '&' iexp
  148     | . iexp '&' error
  149     | . iexp '#' iexp
  150     | . iexp '#' error
  151     | . iexp S_BITSHIFT_LEFT iexp
  152     | . iexp S_BITSHIFT_LEFT error
  153     | . iexp S_BITSHIFT_RIGHT iexp
  154     | . iexp S_BITSHIFT_RIGHT error
  155     | . '~' iexp
  156     | . '~' error
  157     | . '(' expr ')'
  158     | . '(' expr error
  159     | . '(' error
  160     | . function '(' exprlist ')'
  161     | . function '(' error
  162 function: . T_FUNCTION
  169 ident: . T_IDENT_I
  170      | . T_IDENT_K
  171      | . T_IDENT_F
  172      | . T_IDENT_W
  173      | . T_IDENT_S
  174      | . T_IDENT_T
  175      | . T_IDENT_A
  176      | . T_IDENT_P
  177      | . gident
  178 gident: . T_IDENT_GI
  179       | . T_IDENT_GK
  180       | . T_IDENT_GF
  181       | . T_IDENT_GW
  182       | . T_IDENT_GS
  183       | . T_IDENT_GT
  184       | . T_IDENT_GA
  185 constant: . INTEGER_TOKEN
  186         | . NUMBER_TOKEN
  187         | . STRING_TOKEN
  188         | . SRATE_TOKEN
  189         | . KRATE_TOKEN
  190         | . KSMPS_TOKEN
  191         | . NCHNLS_TOKEN
  192         | . NCHNLSI_TOKEN
  193         | . ZERODBFS_TOKEN

    T_FUNCTION      shift, and go to state 46
    SRATE_TOKEN     shift, and go to state 47
    KRATE_TOKEN     shift, and go to state 48
    KSMPS_TOKEN     shift, and go to state 49
    NCHNLS_TOKEN    shift, and go to state 50
    NCHNLSI_TOKEN   shift, and go to state 51
    ZERODBFS_TOKEN  shift, and go to state 52
    STRING_TOKEN    shift, and go to state 53
    T_IDENT_I       shift, and go to state 17
    T_IDENT_GI      shift, and go to state 18
    T_IDENT_K       shift, and go to state 19
    T_IDENT_GK      shift, and go to state 20
    T_IDENT_A       shift, and go to state 21
    T_IDENT_GA      shift, and go to state 22
    T_IDENT_W       shift, and go to state 23
    T_IDENT_GW      shift, and go to state 24
    T_IDENT_F       shift, and go to state 25
    T_IDENT_GF      shift, and go to state 26
    T_IDENT_S       shift, and go to state 27
    T_IDENT_GS      shift, and go to state 28
    T_IDENT_T       shift, and go to state 54
    T_IDENT_GT      shift, and go to state 30
    T_IDENT_P       shift, and go to state 31
    INTEGER_TOKEN   shift, and go to state 55
    NUMBER_TOKEN    shift, and go to state 56
    '+'             shift, and go to state 57
    '-'             shift, and go to state 58
    '~'             shift, and go to state 59
    '('             shift, and go to state 60
    '!'             shift, and go to state 61

    bexpr     go to state 62
    expr      go to state 63
    iexp      go to state 64
    iterm     go to state 65
    ifac      go to state 66
    function  go to state 67
    ident     go to state 68
    gident    go to state 44
    constant  go to state 69


State 4

  194 opcode0: T_OPCODE0 .

    $default  reduce using rule 194 (opcode0)


State 5

   21 $@3: . %empty
   26 udodecl: UDOSTART_DEFINITION . $@3 udoname $@4 ',' $@5 UDO_ANS_TOKEN $@6 ',' UDO_ARGS_TOKEN NEWLINE $@7 statementlist UDOEND_TOKEN NEWLINE

    $default  reduce using rule 21 ($@3)

    $@3  go to state 70


State 6

   14 $@1: . %empty
   16 instrdecl: INSTR_TOKEN . $@1 instlist NEWLINE $@2 statementlist ENDIN_TOKEN NEWLINE
   17          | INSTR_TOKEN . NEWLINE error

    NEWLINE  shift, and go to state 71

    $default  reduce using rule 14 ($@1)

    $@1  go to state 72


State 7

   56 goto: GOTO_TOKEN .

    $default  reduce using rule 56 (goto)


State 8

   57 goto: KGOTO_TOKEN .

    $default  reduce using rule 57 (goto)


State 9

   58 goto: IGOTO_TOKEN .

    $default  reduce using rule 58 (goto)


State 10

  163 rident: SRATE_TOKEN .

    $default  reduce using rule 163 (rident)


State 11

  164 rident: KRATE_TOKEN .

    $default  reduce using rule 164 (rident)


State 12

  165 rident: KSMPS_TOKEN .

    $default  reduce using rule 165 (rident)


State 13

  166 rident: NCHNLS_TOKEN .

    $default  reduce using rule 166 (rident)


State 14

  167 rident: NCHNLSI_TOKEN .

    $default  reduce using rule 167 (rident)


State 15

  168 rident: ZERODBFS_TOKEN .

    $default  reduce using rule 168 (rident)


State 16

   43 ans: T_IDENT . error

    error  shift, and go to state 73


State 17

  169 ident: T_IDENT_I .

    $default  reduce using rule 169 (ident)


State 18

  178 gident: T_IDENT_GI .

    $default  reduce using rule 178 (gident)


State 19

  170 ident: T_IDENT_K .

    $default  reduce using rule 170 (ident)


State 20

  179 gident: T_IDENT_GK .

    $default  reduce using rule 179 (gident)


State 21

  175 ident: T_IDENT_A .

    $default  reduce using rule 175 (ident)


State 22

  184 gident: T_IDENT_GA .

    $default  reduce using rule 184 (gident)


State 23

  172 ident: T_IDENT_W .

    $default  reduce using rule 172 (ident)


State 24

  181 gident: T_IDENT_GW .

    $default  reduce using rule 181 (gident)


State 25

  171 ident: T_IDENT_F .

    $default  reduce using rule 171 (ident)


State 26

  180 gident: T_IDENT_GF .

    $default  reduce using rule 180 (gident)


State 27

  173 ident: T_IDENT_S .

    $default  reduce using rule 173 (ident)


State 28

  182 gident: T_IDENT_GS .

    $default  reduce using rule 182 (gident)


State 29

   32 statement: T_IDENT_T . '=' T_IDENT_T NEWLINE
   33          | T_IDENT_T . '[' iexp ']' '=' expr NEWLINE
  174 ident: T_IDENT_T .

    '='  shift, and go to state 74
    '['  shift, and go to state 75

    '='       [reduce using rule 174 (ident)]
    $default  reduce using rule 174 (ident)


State 30

  183 gident: T_IDENT_GT .

    $default  reduce using rule 183 (gident)


State 31

  176 ident: T_IDENT_P .

    $default  reduce using rule 176 (ident)


State 32

   40 statement: UNTIL_TOKEN . bexpr DO_TOKEN statementlist OD_TOKEN
   98 bexpr: . '(' bexpr ')'
   99      | . expr S_LE expr
  100      | . expr S_LE error
  101      | . expr S_GE expr
  102      | . expr S_GE error
  103      | . expr S_NEQ expr
  104      | . expr S_NEQ error
  105      | . expr S_EQ expr
  106      | . expr S_EQ error
  107      | . expr '=' expr
  108      | . expr '=' error
  109      | . expr S_GT expr
  110      | . expr S_GT error
  111      | . expr S_LT expr
  112      | . expr S_LT error
  113      | . bexpr S_AND bexpr
  114      | . bexpr S_AND error
  115      | . bexpr S_OR bexpr
  116      | . bexpr S_OR error
  117      | . '!' bexpr
  118      | . '!' error
  119 expr: . bexpr '?' expr ':' expr
  120     | . bexpr '?' expr ':' error
  121     | . bexpr '?' expr error
  122     | . bexpr '?' error
  123     | . iexp
  124 iexp: . iexp '+' iexp
  125     | . iexp '+' error
  126     | . iexp '-' iexp
  127     | . iexp '-' error
  128     | . '-' iexp
  129     | . '-' error
  130     | . '+' iexp
  131     | . '+' error
  132     | . iterm
  133 iterm: . iexp '*' iexp
  134      | . iexp '*' error
  135      | . iexp '/' iexp
  136      | . iexp '/' error
  137      | . iexp '^' iexp
  138      | . iexp '^' error
  139      | . iexp '%' iexp
  140      | . iexp '%' error
  141      | . ifac
  142 ifac: . ident
  143     | . constant
  144     | . T_IDENT_T '[' iexp ']'
  145     | . iexp '|' iexp
  146     | . iexp '|' error
  147     | . iexp '&' iexp
  148     | . iexp '&' error
  149     | . iexp '#' iexp
  150     | . iexp '#' error
  151     | . iexp S_BITSHIFT_LEFT iexp
  152     | . iexp S_BITSHIFT_LEFT error
  153     | . iexp S_BITSHIFT_RIGHT iexp
  154     | . iexp S_BITSHIFT_RIGHT error
  155     | . '~' iexp
  156     | . '~' error
  157     | . '(' expr ')'
  158     | . '(' expr error
  159     | . '(' error
  160     | . function '(' exprlist ')'
  161     | . function '(' error
  162 function: . T_FUNCTION
  169 ident: . T_IDENT_I
  170      | . T_IDENT_K
  171      | . T_IDENT_F
  172      | . T_IDENT_W
  173      | . T_IDENT_S
  174      | . T_IDENT_T
  175      | . T_IDENT_A
  176      | . T_IDENT_P
  177      | . gident
  178 gident: . T_IDENT_GI
  179       | . T_IDENT_GK
  180       | . T_IDENT_GF
  181       | . T_IDENT_GW
  182       | . T_IDENT_GS
  183       | . T_IDENT_GT
  184       | . T_IDENT_GA
  185 constant: . INTEGER_TOKEN
  186         | . NUMBER_TOKEN
  187         | . STRING_TOKEN
  188         | . SRATE_TOKEN
  189         | . KRATE_TOKEN
  190         | . KSMPS_TOKEN
  191         | . NCHNLS_TOKEN
  192         | . NCHNLSI_TOKEN
  193         | . ZERODBFS_TOKEN

    T_FUNCTION      shift, and go to state 46
    SRATE_TOKEN     shift, and go to state 47
    KRATE_TOKEN     shift, and go to state 48
    KSMPS_TOKEN     shift, and go to state 49
    NCHNLS_TOKEN    shift, and go to state 50
    NCHNLSI_TOKEN   shift, and go to state 51
    ZERODBFS_TOKEN  shift, and go to state 52
    STRING_TOKEN    shift, and go to state 53
    T_IDENT_I       shift, and go to state 17
    T_IDENT_GI      shift, and go to state 18
    T_IDENT_K       shift, and go to state 19
    T_IDENT_GK      shift, and go to state 20
    T_IDENT_A       shift, and go to state 21
    T_IDENT_GA      shift, and go to state 22
    T_IDENT_W       shift, and go to state 23
    T_IDENT_GW      shift, and go to state 24
    T_IDENT_F       shift, and go to state 25
    T_IDENT_GF      shift, and go to state 26
    T_IDENT_S       shift, and go to state 27
    T_IDENT_GS      shift, and go to state 28
    T_IDENT_T       shift, and go to state 54
    T_IDENT_GT      shift, and go to state 30
    T_IDENT_P       shift, and go to state 31
    INTEGER_TOKEN   shift, and go to state 55
    NUMBER_TOKEN    shift, and go to state 56
    '+'             shift, and go to state 57
    '-'             shift, and go to state 58
    '~'             shift, and go to state 59
    '('             shift, and go to state 60
    '!'             shift, and go to state 61

    bexpr     go to state 76
    expr      go to state 63
    iexp      go to state 64
    iterm     go to state 65
    ifac      go to state 66
    function  go to state 67
    ident     go to state 68
    gident    go to state 44
    constant  go to state 69


State 33

    0 $accept: orcfile . $end

    $end  shift, and go to state 77


State 34
